--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.13.3",
     "discord-py>=2.6.4",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "python-dotenv>=1.2.1",
     "ruff>=0.15.1",
 ]
